<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.desfate.chatgptandroid.ui.views.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_chat"
            app:destination="@id/nav_chat" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.github.desfate.chatgptandroid.ui.views.key.KeyFragment"
        android:label="@string/menu_key"
        tools:layout="@layout/fragment_key" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.github.desfate.chatgptandroid.ui.views.slideshow.SlideshowFragment"
        android:label="@string/menu_github"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.github.desfate.chatgptandroid.ui.compose.business.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_slideshow" />

</navigation>